--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  height: 105vh;
+  height: 115vh;
   display: flex;
   flex-direction: column;
 }
@@ -79,11 +79,12 @@ h3 {
   color: whitesmoke;
   text-shadow: -4px -2px 9px #e9e395;
 }
-.playerLivesCount {
+.playerLivesCount,
+figcaption {
   font-size: 1.5em;
   font-weight: 500;
   color: rgb(248, 136, 7);
-  text-shadow: -4px -2px 9px rgba(240, 236, 231, 0.657); 
+  text-shadow: -4px -2px 9px rgba(240, 236, 231, 0.657);
   font-family: "Lobster Two", cursive;
 }
 .card {
@@ -103,7 +104,7 @@ h3 {
 
 .back {
   background: #f1990b;
-  background-image: url("../images/skelton.jpeg");
+  background-image: url("/images/skelton.jpeg");
   background-size: cover;
   backface-visibility: hidden;
 }
@@ -119,6 +120,7 @@ footer {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  flex-flow: row wrap;
   color: whitesmoke;
   font-family: "Henny Penny", cursive;
   margin-top: 1.9em;
@@ -126,11 +128,20 @@ footer {
   margin-right: 1em;
   font-size: 12px;
 }
+footer p {
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: space-between;
+  align-items: center;
+}
 footer a {
   display: flex;
   justify-content: center;
   text-decoration: none;
   color: whitesmoke;
+}
+audio {
+  width: 100%;
 }
 @media (min-width: 768px) {
   h1 {
