Added new photo

--- a/css/style.css
+++ b/css/style.css
@@ -104,7 +104,7 @@ figcaption {
 
 .back {
   background: #f1990b;
-  background-image: url("/images/skelton.jpeg");
+  background-image: url("../images/skelton.jpeg");
   background-size: cover;
   backface-visibility: hidden;
 }
