--- a/css/style.css
+++ b/css/style.css
@@ -104,7 +104,7 @@ figcaption {
 
 .back {
   background: #f1990b;
-  background-image: url("../images/skelton.jpeg");
+  background-image: url("/images/skelton.jpeg");
   background-size: cover;
   backface-visibility: hidden;
 }
@@ -143,6 +143,7 @@ footer a {
 audio {
   width: 100%;
 }
+
 @media (min-width: 768px) {
   h1 {
     font-size: 4rem;
